--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,7 +1015,7 @@ Nav Menu style
 Home Section style
 ==================*/
 .home{
-    background: url(../images/background/header.jpg) no-repeat bottom center;
+    background: url(../images/background/header.jpg) no-repeat top center;
     background-size: cover;
     position: relative;
 }
